# ppc-aalto-2024

./: .bazelrc  .clang-tidy  BUILD  MODULE.bazel  README.md
exercises/cp/: BUILD  cp1.cc  cp1_benchmark.cc  cp1_test.cc  cp2.cc  cp2.h  cp2_benchmark.cc  cp2_test.cc  cp2a.cc  cp2a.h  cp2a_benchmark.cc  cp2a_test.cc  ops.h  ops_test.cc
exercises/is/: BUILD  is.h  is2.cc  is2_test.cc
exercises/mf/: BUILD  mf1.cc  mf1.h  mf1_benchmark.cc  mf1_test.cc  mf2.cc  mf2_benchmark.cc  mf2_test.cc
exercises/pre0/: BUILD  pre0.cc  pre0.h  pre0_benchmark.cc  pre0_test.cc
helpers/: BUILD  bmp_utils.cc  bmp_utils.h  bmp_utils_test.cc  image.h  png_utils.cc  png_utils.h  png_utils_test.cc
testdata/: 1d_corelate.npy  BUILD
