###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(version = "0.1.0", repo_name = "ppc_aalto_2024")

bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.6.0")
bazel_dep(name = "apple_support", version = "1.15.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "libpng", version = "1.6.43")


bazel_dep(name = "highway", version = "1.1.0")
archive_override(
    module_name = "highway",
    urls = "https://github.com/google/highway/archive/refs/tags/1.1.0.tar.gz",
    integrity = "sha256-NUqLRTm1iOcLmOxwhEJz4/J0EwLEw3e8xOgbPRhm98k=",
    strip_prefix = "highway-1.1.0",
    patches = ["//third_party:highway_module_bazel.patch"],
)

# linter
bazel_dep(name = "aspect_rules_lint", version = "0.14.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
